[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/scenes/actors/spawner.gd" type="Script" id=1]
[ext_resource path="res://source/scenes/actors/npc/pedestrian.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 67 )

[node name="Spawner" type="Area2D" groups=["wrapable"]]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource( 1 )
scene_to_spawn = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.5, 1.90735e-06 )
scale = Vector2( 8.25, 4.5 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
